--- a/PILOTE_Suite.html
+++ b/PILOTE_Suite.html
@@ -618,16 +618,24 @@ input[name="dateEcheance"],
   background: rgba(30,41,59,0.6);
 }
 
-</style></head>
+</style>
+<style>
+/* V44 - Bandeau en MAJUSCULE */
+.topbar, .navbar, header, nav {
+    text-transform: uppercase !important;
+}
+</style>
+
+</head>
 <body>
 
     <nav class="topnav">
         <a class="brand" onclick="goHome()" title="Accueil">
             <div class="brand-icon" id="brandIcon"><span id="brandLetter">P</span><img id="brandLogo" style="display:none"></div>
-            <div class="brand-text">CADIR<span>Suite Direction</span></div>
+            <div class="brand-text">ADMIN<span>Suite Direction</span></div>
         </a>
         <div class="nav-sep"></div>
-        <div class="nav-items" id="navItems"><div class="nav-item active" data-module="perdir" onclick="loadModule('perdir')" title="Ctrl+P"><i class="fas fa-building-columns"></i><span class="nav-label">CADIR</span><span class="nav-badge">Direction</span><kbd class="nav-shortcut">Ctrl+P</kbd></div><div class="nav-item" data-module="exam" onclick="loadModule('exam')" title="Ctrl+E"><i class="fas fa-file-pen"></i><span class="nav-label">Écrit</span><span class="nav-badge">Épreuves</span><kbd class="nav-shortcut">Ctrl+E</kbd></div><div class="nav-item" data-module="oral" onclick="loadModule('oral')" title="Ctrl+O"><i class="fas fa-comments"></i><span class="nav-label">Oral</span><span class="nav-badge">Oraux</span><kbd class="nav-shortcut">Ctrl+O</kbd></div><div class="nav-item" data-module="dhg" onclick="loadModule('dhg')" title="Ctrl+D"><i class="fas fa-calendar-check"></i><span class="nav-label">DHG</span><span class="nav-badge">Services</span><kbd class="nav-shortcut">Ctrl+D</kbd></div><div class="nav-item" data-module="aed" onclick="loadModule('aed')" title="Ctrl+A"><i class="fas fa-user-shield"></i><span class="nav-label">AED</span><span class="nav-badge">Vie Scolaire</span><kbd class="nav-shortcut">Ctrl+A</kbd></div><div class="nav-item" data-module="bibase" onclick="loadModule('bibase')" title="Ctrl+B"><i class="fas fa-newspaper"></i><span class="nav-label">BULLETIN</span><span class="nav-badge">Information</span><kbd class="nav-shortcut">Ctrl+B</kbd></div><div class="nav-item" data-module="data" onclick="openDataPanel()" title="Ctrl+D"><i class="fas fa-database"></i><span class="nav-label">Données</span><span class="nav-badge">Import</span><kbd class="nav-shortcut">Ctrl+D</kbd></div></div>
+        <div class="nav-items" id="navItems"><div class="nav-item active" data-module="perdir" onclick="loadModule('perdir')" title="Ctrl+P"><i class="fas fa-building-columns"></i><span class="nav-label">ADMIN</span><span class="nav-badge">Direction</span><kbd class="nav-shortcut">Ctrl+P</kbd></div><div class="nav-item" data-module="exam" onclick="loadModule('exam')" title="Ctrl+E"><i class="fas fa-file-pen"></i><span class="nav-label">Écrit</span><span class="nav-badge">Épreuves</span><kbd class="nav-shortcut">Ctrl+E</kbd></div><div class="nav-item" data-module="oral" onclick="loadModule('oral')" title="Ctrl+O"><i class="fas fa-comments"></i><span class="nav-label">Oral</span><span class="nav-badge">Oraux</span><kbd class="nav-shortcut">Ctrl+O</kbd></div><div class="nav-item" data-module="dhg" onclick="loadModule('dhg')" title="Ctrl+D"><i class="fas fa-calendar-check"></i><span class="nav-label">DHG</span><span class="nav-badge">Services</span><kbd class="nav-shortcut">Ctrl+D</kbd></div><div class="nav-item" data-module="aed" onclick="loadModule('aed')" title="Ctrl+A"><i class="fas fa-user-shield"></i><span class="nav-label">AED</span><span class="nav-badge">Vie Scolaire</span><kbd class="nav-shortcut">Ctrl+A</kbd></div><div class="nav-item" data-module="bibase" onclick="loadModule('bibase')" title="Ctrl+B"><i class="fas fa-newspaper"></i><span class="nav-label">BULLETIN</span><span class="nav-badge">Information</span><kbd class="nav-shortcut">Ctrl+B</kbd></div><div class="nav-item" data-module="data" onclick="openDataPanel()" title="Ctrl+D"><i class="fas fa-database"></i><span class="nav-label">Données</span><span class="nav-badge">Import</span><kbd class="nav-shortcut">Ctrl+D</kbd></div></div>
         <div class="nav-right">
             <div class="nav-clock" id="clock">mer. 18 févr., 21:26</div>
             <button class="nav-btn" onclick="openSettings()" title="Paramètres (Alt+P)"><i class="fas fa-cog"></i></button>
@@ -988,7 +996,7 @@ fichier JSON contient identité, images, ordre et visibilité des modules.</div>
                 <h1 class="welcome-title">Bienvenue sur CADIR</h1>
                 <p class="welcome-subtitle" id="welcomeSubtitle">Suite d'outils pour la direction d'établissement</p>
             </div>
-            <div class="module-grid" id="moduleGrid"><div class="module-card" data-m="perdir" onclick="loadModule('perdir')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><rect x="3" y="10" width="18" height="11" rx="1"></rect><path d="M3 10l9-7 9 7"></path><line x1="12" y1="3" x2="12" y2="10"></line><rect x="7" y="14" width="3" height="7"></rect><rect x="14" y="14" width="3" height="7"></rect></svg></div><h3>CADIR</h3><p>Direction &amp; pilotage</p></div><div class="module-card" data-m="exam" onclick="loadModule('exam')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><path d="M10 9H8"></path></svg></div><h3>Écrit</h3><p>Organisation d'épreuves écrites</p></div><div class="module-card" data-m="oral" onclick="loadModule('oral')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg></div><h3>Oral</h3><p>Organisation d'épreuves orales</p></div><div class="module-card" data-m="aed" onclick="loadModule('aed')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle><path d="M18 8s2 2 0 5"></path></svg></div><h3>AED</h3><p>Assistants d'éducation</p></div><div class="module-card" data-m="bibase" onclick="loadModule('bibase')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a4 4 0 0 1-4-4V6"></path><line x1="16" y1="6" x2="10" y2="6"></line><line x1="16" y1="10" x2="10" y2="10"></line><line x1="16" y1="14" x2="10" y2="14"></line></svg></div><h3>BULLETIN</h3><p>Bulletin d'information</p></div><div class="module-card" data-m="data" onclick="openDataPanel()"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg></div><h3>DONNÉES</h3><p>Import élèves &amp; enseignants</p></div></div>
+            <div class="module-grid" id="moduleGrid"><div class="module-card" data-m="perdir" onclick="loadModule('perdir')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><rect x="3" y="10" width="18" height="11" rx="1"></rect><path d="M3 10l9-7 9 7"></path><line x1="12" y1="3" x2="12" y2="10"></line><rect x="7" y="14" width="3" height="7"></rect><rect x="14" y="14" width="3" height="7"></rect></svg></div><h3>ADMIN</h3><p>Direction &amp; pilotage</p></div><div class="module-card" data-m="exam" onclick="loadModule('exam')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="16" y1="13" x2="8" y2="13"></line><line x1="16" y1="17" x2="8" y2="17"></line><path d="M10 9H8"></path></svg></div><h3>Écrit</h3><p>Organisation d'épreuves écrites</p></div><div class="module-card" data-m="oral" onclick="loadModule('oral')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg></div><h3>Oral</h3><p>Organisation d'épreuves orales</p></div><div class="module-card" data-m="aed" onclick="loadModule('aed')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle><path d="M18 8s2 2 0 5"></path></svg></div><h3>AED</h3><p>Assistants d'éducation</p></div><div class="module-card" data-m="bibase" onclick="loadModule('bibase')"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a4 4 0 0 1-4-4V6"></path><line x1="16" y1="6" x2="10" y2="6"></line><line x1="16" y1="10" x2="10" y2="10"></line><line x1="16" y1="14" x2="10" y2="14"></line></svg></div><h3>BULLETIN</h3><p>Bulletin d'information</p></div><div class="module-card" data-m="data" onclick="openDataPanel()"><div class="module-icon"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="22" height="22"><ellipse cx="12" cy="5" rx="9" ry="3"></ellipse><path d="M21 12c0 1.66-4 3-9 3s-9-1.34-9-3"></path><path d="M3 5v14c0 1.66 4 3 9 3s9-1.34 9-3V5"></path></svg></div><h3>DONNÉES</h3><p>Import élèves &amp; enseignants</p></div></div>
         </div>
 
         <!-- DATA PANEL -->
@@ -7786,6 +7794,261 @@ Principe:
 
   document.addEventListener('DOMContentLoaded', function(){
     setTimeout(injectSortIntoPerdir, 1200);
+  });
+})();
+</script>
+
+
+<script>
+/* V44 - Ne pas afficher le contenu "Message à adresser aux parents" dans les vignettes */
+(function(){
+  function injectHideMessage(){
+    const fr = document.getElementById('frame-perdir');
+    if(!fr) return;
+    let doc;
+    try{ doc = fr.contentDocument; }catch(e){ return; }
+    if(!doc || doc.__cadirHideMsg) return;
+
+    const style = doc.createElement('style');
+    style.textContent = `
+      /* Cache les paragraphes longs dans les vignettes (message parents) */
+      div, article, section {
+      }
+      .card p,
+      .card .message,
+      .card .content,
+      div[class*="card"] p {
+        display: none !important;
+      }
+    `;
+    doc.head.appendChild(style);
+
+    doc.__cadirHideMsg = true;
+  }
+
+  document.getElementById('frame-perdir')?.addEventListener('load', function(){
+    setTimeout(injectHideMessage, 600);
+  });
+
+  const _loadModule = window.loadModule;
+  if (typeof _loadModule === 'function'){
+    window.loadModule = function(name){
+      const r = _loadModule.apply(this, arguments);
+      if (name === 'perdir'){
+        setTimeout(injectHideMessage, 800);
+      }
+      return r;
+    };
+  }
+
+  document.addEventListener('DOMContentLoaded', function(){
+    setTimeout(injectHideMessage, 1200);
+  });
+})();
+</script>
+
+
+<script>
+/* ===== V45 - Vignettes Activités pédagogiques =====
+   - Réduit la hauteur (compact)
+   - Aligne parfaitement Titre + Date (sur une ligne)
+   - Ajoute un badge "PARENTS INFORMÉS" si l'option est cochée / détectée
+   - Continue de cacher le contenu du message parents dans les vignettes
+*/
+(function(){
+  function injectActivitiesCardUI(){
+    const fr = document.getElementById('frame-perdir');
+    if(!fr) return;
+    let doc;
+    try{ doc = fr.contentDocument; }catch(e){ return; }
+    if(!doc || doc.__cadirV45Cards) return;
+
+    const style = doc.createElement('style');
+    style.textContent = `
+      /* Cible vignettes: conteneurs avec boutons crayon + corbeille */
+      .cadir-ap-card{
+        padding: 10px 14px !important;
+        min-height: unset !important;
+      }
+
+      .cadir-ap-head{
+        display:flex !important;
+        align-items:center !important;
+        gap:8px !important;
+        flex-wrap:wrap !important;
+      }
+
+      .cadir-ap-title{
+        font-weight:800 !important;
+        display:flex !important;
+        align-items:baseline !important;
+        gap:8px !important;
+        margin:0 !important;
+        line-height:1.1 !important;
+      }
+
+      .cadir-ap-date{
+        color:#6b7280 !important;
+        font-size:12px !important;
+        font-weight:800 !important;
+        white-space:nowrap !important;
+      }
+
+      .cadir-ap-badge{
+        background: rgba(16,185,129,.12) !important;
+        color: #059669 !important;
+        border: 1px solid rgba(16,185,129,.25) !important;
+        font-weight:900 !important;
+        font-size:11px !important;
+        padding: 3px 8px !important;
+        border-radius: 999px !important;
+        white-space:nowrap !important;
+      }
+
+      /* cacher le message parents (contenu long) dans les vignettes */
+      .cadir-ap-card p,
+      .cadir-ap-card .message,
+      .cadir-ap-card .content,
+      .cadir-ap-card .ql-editor,
+      .cadir-ap-card textarea{
+        display:none !important;
+      }
+
+      /* réduire espaces internes */
+      .cadir-ap-card *{
+        margin-bottom: 0 !important;
+      }
+    `;
+    doc.head.appendChild(style);
+
+    function normalize(s){ return String(s||'').trim().toLowerCase().replace(/\s+/g,' '); }
+
+    function findCards(){
+      const pens = Array.from(doc.querySelectorAll('.fa-pen,.fa-pencil,.fa-edit'));
+      const cards = new Set();
+      pens.forEach(icon=>{
+        const p = icon.closest('button,a')?.closest('div,li,article,section') || icon.closest('div,li,article,section');
+        if (!p) return;
+        const hasTrash = !!p.querySelector('.fa-trash,.fa-trash-alt') || !!p.querySelector('button[title*="sup" i],a[title*="sup" i]');
+        if (!hasTrash) return;
+
+        let card = p;
+        for(let j=0;j<4;j++){
+          if (!card.parentElement) break;
+          const cs = doc.defaultView.getComputedStyle(card);
+          if ((cs.borderRadius && cs.borderRadius !== '0px') || cs.boxShadow !== 'none') break;
+          card = card.parentElement;
+        }
+        cards.add(card);
+      });
+      return Array.from(cards);
+    }
+
+    function detectParentsInformed(card){
+      // best effort: if the card has an icon/check or the text already contains "Parents inform"
+      const txt = normalize(card.textContent);
+      if (txt.includes('parents inform')) return true;
+      // some UIs show a check icon near it
+      if (card.querySelector('.fa-check, .fa-check-circle, .bi-check, .lucide-check')) return true;
+      return false;
+    }
+
+    function getTitleNode(card){
+      return card.querySelector('h3,h4,.title,.card-title,strong') || card.firstElementChild || card;
+    }
+
+    function ensureHeaderLayout(card){
+      card.classList.add('cadir-ap-card');
+
+      // locate title element
+      const titleNode = getTitleNode(card);
+      if (!titleNode) return;
+
+      // date span (already injected by earlier versions): .ap-inline-date or text near title
+      let dateSpan = card.querySelector('.ap-inline-date');
+      if (dateSpan){
+        // convert to our class + strip bullet
+        dateSpan.classList.add('cadir-ap-date');
+        dateSpan.textContent = dateSpan.textContent.replace(/^•\s*/,'').trim();
+      }
+
+      // Wrap title + date into a single line container
+      // Avoid duplicating wrapper
+      if (!titleNode.closest('.cadir-ap-head')){
+        const head = doc.createElement('div');
+        head.className = 'cadir-ap-head';
+
+        const titleWrap = doc.createElement('div');
+        titleWrap.className = 'cadir-ap-title';
+
+        // move titleNode into titleWrap
+        titleNode.parentElement.insertBefore(head, titleNode);
+        head.appendChild(titleWrap);
+        titleWrap.appendChild(titleNode);
+
+        // move dateSpan next to title
+        if (dateSpan){
+          titleWrap.appendChild(dateSpan);
+        }
+
+        // badge if parents informed
+        if (detectParentsInformed(card)){
+          const badge = doc.createElement('span');
+          badge.className = 'cadir-ap-badge';
+          badge.textContent = 'PARENTS INFORMÉS';
+          head.appendChild(badge);
+        }
+      } else {
+        // already wrapped: ensure badge exists
+        const head = titleNode.closest('.cadir-ap-head');
+        if (head && !head.querySelector('.cadir-ap-badge') && detectParentsInformed(card)){
+          const badge = doc.createElement('span');
+          badge.className = 'cadir-ap-badge';
+          badge.textContent = 'PARENTS INFORMÉS';
+          head.appendChild(badge);
+        }
+      }
+    }
+
+    let raf=0;
+    function apply(){
+      raf=0;
+      const cards = findCards();
+      cards.forEach(ensureHeaderLayout);
+    }
+    function schedule(){
+      if (raf) return;
+      raf = requestAnimationFrame(apply);
+    }
+
+    const obs = new MutationObserver(()=>schedule());
+    obs.observe(doc.body, {childList:true, subtree:true});
+    schedule();
+    setTimeout(schedule, 350);
+    setTimeout(schedule, 1200);
+
+    doc.__cadirV45Cards = true;
+  }
+
+  document.getElementById('frame-perdir')?.addEventListener('load', function(){
+    setTimeout(injectActivitiesCardUI, 600);
+    setTimeout(injectActivitiesCardUI, 1400);
+  });
+
+  const _loadModule = window.loadModule;
+  if (typeof _loadModule === 'function'){
+    window.loadModule = function(name){
+      const r = _loadModule.apply(this, arguments);
+      if (name === 'perdir'){
+        setTimeout(injectActivitiesCardUI, 800);
+        setTimeout(injectActivitiesCardUI, 1600);
+      }
+      return r;
+    };
+  }
+
+  document.addEventListener('DOMContentLoaded', function(){
+    setTimeout(injectActivitiesCardUI, 1200);
   });
 })();
 </script>
