--- a/PILOTE_Suite.html
+++ b/PILOTE_Suite.html
@@ -8310,4 +8310,393 @@ Principe:
 })();
 </script>
 
+
+<script>
+/* ===== V47 - Vignettes Activités pédagogiques: intitulé + date + info parents + modifier ===== */
+(function(){
+  function injectPerdirCardsV47(){
+    const fr = document.getElementById('frame-perdir');
+    if(!fr) return;
+    let doc;
+    try{ doc = fr.contentDocument; }catch(e){ return; }
+    if(!doc || doc.__cadirV47Applied) return;
+
+    const st = doc.createElement('style');
+    st.textContent = `
+      .cadir-ap-card{ padding:10px 14px !important; }
+      .cadir-ap-head{ display:flex !important; align-items:center !important; justify-content:space-between !important; gap:10px !important; }
+      .cadir-ap-left{ display:flex !important; flex-direction:column !important; gap:6px !important; min-width:0 !important; }
+      .cadir-ap-titleline{ display:flex !important; align-items:baseline !important; gap:8px !important; flex-wrap:wrap !important; }
+      .cadir-ap-date{ color:#6b7280 !important; font-size:12px !important; font-weight:800 !important; white-space:nowrap !important; }
+      .cadir-ap-meta{ display:flex !important; align-items:center !important; gap:8px !important; flex-wrap:wrap !important; }
+      .cadir-ap-parents{
+        background: rgba(59,130,246,.10) !important;
+        color:#2563eb !important;
+        border: 1px solid rgba(59,130,246,.22) !important;
+        font-weight:900 !important;
+        font-size:11px !important;
+        padding: 3px 8px !important;
+        border-radius: 999px !important;
+        text-transform:uppercase !important;
+        white-space:nowrap !important;
+      }
+      .cadir-ap-actions{ display:flex !important; align-items:center !important; gap:8px !important; margin-left:auto !important; flex:0 0 auto !important; }
+
+      /* Pas de suppression dans la vignette */
+      .cadir-ap-card .fa-trash,
+      .cadir-ap-card .fa-trash-alt,
+      .cadir-ap-card .bi-trash,
+      .cadir-ap-card button[title*="sup" i],
+      .cadir-ap-card a[title*="sup" i]{ display:none !important; visibility:hidden !important; pointer-events:none !important; }
+
+      /* Masquer le contenu long du message (rich text), pas l'info */
+      .cadir-ap-card .ql-editor,
+      .cadir-ap-card [contenteditable="true"],
+      .cadir-ap-card textarea,
+      .cadir-ap-card .richtext,
+      .cadir-ap-card .wysiwyg{ display:none !important; }
+
+      .cadir-ap-hide-long{ display:none !important; }
+    `;
+    doc.head.appendChild(st);
+
+    function normalize(s){ return String(s||'').trim().toLowerCase().replace(/\s+/g,' '); }
+
+    function findCards(){
+      const pens = Array.from(doc.querySelectorAll('.fa-pen,.fa-pencil,.fa-edit'));
+      const cards = new Set();
+      pens.forEach(icon=>{
+        const p = icon.closest('button,a')?.closest('div,li,article,section') || icon.closest('div,li,article,section');
+        if (!p) return;
+        let card = p;
+        for(let j=0;j<4;j++){
+          if (!card.parentElement) break;
+          const cs = doc.defaultView.getComputedStyle(card);
+          if ((cs.borderRadius && cs.borderRadius !== '0px') || cs.boxShadow !== 'none') break;
+          card = card.parentElement;
+        }
+        cards.add(card);
+      });
+      return Array.from(cards);
+    }
+
+    function detectParentsSent(card){
+      const t = normalize(card.textContent || '');
+      if (t.includes('message envoyé aux parents') || t.includes('message envoye aux parents')) return true;
+      if (t.includes('parents inform')) return true;
+      if (card.querySelector('.fa-check, .fa-check-circle, .bi-check, .lucide-check')) return true;
+      return false;
+    }
+
+    function getTitleNode(card){
+      return card.querySelector('h3,h4,.title,.card-title,strong') || card.firstElementChild || card;
+    }
+
+    function getDateNode(card){
+      // date injected earlier: .ap-inline-date or already transformed .cadir-ap-date
+      return card.querySelector('.cadir-ap-date') || card.querySelector('.ap-inline-date');
+    }
+
+    function hideLongTextBlocks(card){
+      // Hide blocks that look like the message: large text nodes
+      const blocks = Array.from(card.querySelectorAll('div,p,span'));
+      blocks.forEach(b=>{
+        if (b.classList.contains('cadir-ap-parents') || b.classList.contains('cadir-ap-date')) return;
+        const txt = (b.textContent || '').trim();
+        if (txt.length >= 120) b.classList.add('cadir-ap-hide-long');
+      });
+    }
+
+    function ensureLayout(card){
+      card.classList.add('cadir-ap-card');
+
+      // Find edit action (pen) and keep it right
+      const editBtn = card.querySelector('.fa-pen,.fa-pencil,.fa-edit')?.closest('button,a');
+
+      // Ensure header container
+      let head = card.querySelector('.cadir-ap-head');
+      let left, actions, titleLine, metaLine;
+
+      if (!head){
+        head = doc.createElement('div');
+        head.className = 'cadir-ap-head';
+
+        left = doc.createElement('div');
+        left.className = 'cadir-ap-left';
+
+        actions = doc.createElement('div');
+        actions.className = 'cadir-ap-actions';
+
+        titleLine = doc.createElement('div');
+        titleLine.className = 'cadir-ap-titleline';
+
+        metaLine = doc.createElement('div');
+        metaLine.className = 'cadir-ap-meta';
+
+        // Insert head at top of card
+        card.insertBefore(head, card.firstChild);
+        head.appendChild(left);
+        head.appendChild(actions);
+        left.appendChild(titleLine);
+        left.appendChild(metaLine);
+      } else {
+        left = head.querySelector('.cadir-ap-left') || head.firstElementChild;
+        actions = head.querySelector('.cadir-ap-actions') || head.lastElementChild;
+        titleLine = head.querySelector('.cadir-ap-titleline') || left?.firstElementChild;
+        metaLine = head.querySelector('.cadir-ap-meta') || left?.lastElementChild;
+      }
+
+      // Move title + date into titleLine
+      const titleNode = getTitleNode(card);
+      const dateNode = getDateNode(card);
+      if (titleNode && titleLine && !titleLine.contains(titleNode)) titleLine.appendChild(titleNode);
+
+      if (dateNode){
+        dateNode.classList.add('cadir-ap-date');
+        // strip leading bullet if any
+        dateNode.textContent = (dateNode.textContent || '').replace(/^•\s*/,'').trim();
+        if (titleLine && !titleLine.contains(dateNode)) titleLine.appendChild(dateNode);
+      }
+
+      // Parents badge in meta line (no message content)
+      if (metaLine){
+        let badge = metaLine.querySelector('.cadir-ap-parents') || card.querySelector('.cadir-ap-parents');
+        if (!badge){
+          badge = doc.createElement('span');
+          badge.className = 'cadir-ap-parents';
+          badge.textContent = 'MESSAGE ENVOYÉ AUX PARENTS';
+          metaLine.appendChild(badge);
+        }
+        badge.style.display = detectParentsSent(card) ? 'inline-flex' : 'none';
+      }
+
+      // Keep edit button on right
+      if (editBtn && actions && editBtn.parentElement !== actions){
+        actions.appendChild(editBtn);
+      }
+
+      // Hide long message content blocks
+      hideLongTextBlocks(card);
+    }
+
+    // Apply continuously (rerenders)
+    let raf=0;
+    function apply(){
+      raf=0;
+      findCards().forEach(ensureLayout);
+    }
+    function schedule(){ if (raf) return; raf = requestAnimationFrame(apply); }
+
+    const obs = new MutationObserver(()=>schedule());
+    obs.observe(doc.body, {childList:true, subtree:true});
+    schedule();
+    setTimeout(schedule, 350);
+    setTimeout(schedule, 1200);
+
+    doc.__cadirV47Applied = true;
+  }
+
+  document.getElementById('frame-perdir')?.addEventListener('load', function(){
+    setTimeout(injectPerdirCardsV47, 600);
+    setTimeout(injectPerdirCardsV47, 1400);
+  });
+
+  const _loadModule = window.loadModule;
+  if (typeof _loadModule === 'function'){
+    window.loadModule = function(name){
+      const r = _loadModule.apply(this, arguments);
+      if (name === 'perdir'){
+        setTimeout(injectPerdirCardsV47, 900);
+      }
+      return r;
+    };
+  }
+
+  document.addEventListener('DOMContentLoaded', function(){
+    setTimeout(injectPerdirCardsV47, 1200);
+  });
+})();
+</script>
+
+
+<script>
+/* ===== V48 - Accueil: afficher les "ÉVÉNEMENTS DU JOUR" DANS UNE VIGNETTE (toujours) =====
+   - Détecte le bloc "ÉVÉNEMENTS DU JOUR" existant (titre + lignes heures)
+   - Le remplace/encapsule dans une card visible (fond blanc, bordure, ombre)
+   - Si rien n'est trouvé, ne fait rien.
+*/
+(function(){
+  function findHomeTodayBlock(){
+    // Find heading that matches
+    const nodes = Array.from(document.querySelectorAll('h1,h2,h3,h4,div,span,p'));
+    const heading = nodes.find(n => (n.textContent||'').trim().toUpperCase() === "ÉVÉNEMENTS DU JOUR" || (n.textContent||'').trim().toUpperCase() === "EVENEMENTS DU JOUR");
+    if (!heading) return null;
+
+    // collect following siblings that look like event lines (contain "—" or time)
+    const lines = [];
+    let cur = heading.nextElementSibling;
+    for (let i=0; i<8 && cur; i++){
+      const txt = (cur.textContent||'').trim();
+      if (!txt) { cur = cur.nextElementSibling; continue; }
+      if (/^\d{1,2}:\d{2}\s*[—-]/.test(txt) || /\d{1,2}:\d{2}/.test(txt)){
+        lines.push(cur);
+        cur = cur.nextElementSibling;
+      } else {
+        // stop if we reach another section heading
+        if (/^[A-ZÉÈÊÀÇ0-9 \-]{8,}$/.test(txt.toUpperCase())) break;
+        // allow small spacer
+        if (lines.length===0 && txt.length<3){ cur = cur.nextElementSibling; continue; }
+        // stop otherwise
+        break;
+      }
+    }
+    return {heading, lines};
+  }
+
+  function ensureCardStyles(){
+    if (document.getElementById('cadir-home-today-card-style')) return;
+    const st = document.createElement('style');
+    st.id = 'cadir-home-today-card-style';
+    st.textContent = `
+      .cadir-today-card{
+        background:#ffffff;
+        border-radius:16px;
+        border:1px solid rgba(15,23,42,.10);
+        box-shadow:0 10px 28px rgba(0,0,0,.08);
+        padding:14px 18px;
+        max-width: 520px;
+        margin: 16px auto 0 auto;
+        text-align:left;
+      }
+      .cadir-today-card-title{
+        font-weight:900;
+        letter-spacing:.05em;
+        font-size:12px;
+        color:#0f172a;
+        text-transform:uppercase;
+        margin-bottom:10px;
+        display:flex;
+        align-items:center;
+        gap:8px;
+      }
+      .cadir-today-card-list{
+        display:flex;
+        flex-direction:column;
+        gap:6px;
+        font-size:14px;
+        color:#0f172a;
+      }
+      .cadir-today-card-item{
+        display:flex;
+        gap:10px;
+        align-items:flex-start;
+        line-height:1.2;
+      }
+      .cadir-today-card-time{
+        font-weight:900;
+        color:#0f172a;
+        min-width:60px;
+        white-space:nowrap;
+      }
+      .cadir-today-card-text{
+        color:#0f172a;
+        flex:1;
+      }
+    `;
+    document.head.appendChild(st);
+  }
+
+  function wrapTodayIntoCard(){
+    const found = findHomeTodayBlock();
+    if (!found) return;
+
+    ensureCardStyles();
+
+    const {heading, lines} = found;
+
+    // If already wrapped, do nothing
+    if (heading.closest('.cadir-today-card')) return;
+
+    const card = document.createElement('div');
+    card.className = 'cadir-today-card';
+
+    const title = document.createElement('div');
+    title.className = 'cadir-today-card-title';
+    title.textContent = 'ÉVÉNEMENTS DU JOUR';
+
+    const list = document.createElement('div');
+    list.className = 'cadir-today-card-list';
+
+    // Replace original heading content
+    const parent = heading.parentElement;
+    if (!parent) return;
+
+    // Insert card before heading
+    parent.insertBefore(card, heading);
+    card.appendChild(title);
+    card.appendChild(list);
+
+    // Remove original heading
+    heading.remove();
+
+    // Move lines into card
+    if (lines.length){
+      lines.forEach(el=>{
+        const txt = (el.textContent||'').trim();
+        const m = txt.match(/^(\d{1,2}:\d{2})\s*[—-]\s*(.*)$/);
+        const item = document.createElement('div');
+        item.className = 'cadir-today-card-item';
+        if (m){
+          const time = document.createElement('div');
+          time.className = 'cadir-today-card-time';
+          time.textContent = m[1];
+          const text = document.createElement('div');
+          text.className = 'cadir-today-card-text';
+          text.textContent = m[2] || '';
+          item.appendChild(time);
+          item.appendChild(text);
+        } else {
+          const text = document.createElement('div');
+          text.className = 'cadir-today-card-text';
+          text.textContent = txt;
+          item.appendChild(text);
+        }
+        list.appendChild(item);
+        el.remove();
+      });
+    } else {
+      const empty = document.createElement('div');
+      empty.className = 'cadir-today-card-item';
+      empty.textContent = 'Aucun événement aujourd’hui.';
+      list.appendChild(empty);
+    }
+  }
+
+  // Run after render + on module load
+  function schedule(){
+    wrapTodayIntoCard();
+    setTimeout(wrapTodayIntoCard, 500);
+    setTimeout(wrapTodayIntoCard, 1400);
+  }
+
+  document.addEventListener('DOMContentLoaded', schedule);
+
+  const _loadModule = window.loadModule;
+  if (typeof _loadModule === 'function'){
+    window.loadModule = function(name){
+      const r = _loadModule.apply(this, arguments);
+      if (name === 'home' || name === 'cadir'){
+        setTimeout(wrapTodayIntoCard, 600);
+        setTimeout(wrapTodayIntoCard, 1400);
+      }
+      return r;
+    };
+  }
+
+  // Also observe home re-render
+  const obs = new MutationObserver(()=>wrapTodayIntoCard());
+  obs.observe(document.body, {childList:true, subtree:true});
+})();
+</script>
+
 </body></html>
